fix spacing for content below navbar

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   min-height: 200vh;
 }
 
+.AppContent {
+  padding-top: 50px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
