--- a/src/components/public/navbar/style.css
+++ b/src/components/public/navbar/style.css
@@ -4,7 +4,10 @@
     position: fixed; /* Make it stick/fixed */
     top: 0; /* Stay on top */
     width: 100%; /* Full width */
+    min-height: 50px;
     transition: top 0.3s; /* Transition effect when sliding down (and up) */
+
+    background-color: #5555;
 }
 
 #link {
